overflow issue fixed

--- a/about.html
+++ b/about.html
@@ -95,7 +95,7 @@
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-12">
-                        <h1 class="text-white text-center section-mainHeading" data-aos="zoom-in">About Us</h1>
+                        <h1 class="text-white text-center section-mainHeading" >About Us</h1>
                     </div>
                 </div>
             </div>
@@ -106,21 +106,21 @@
           <section id="about-section" class="section-gap">
             <div class="container">
                 <div class="row justify-content-center">
-                    <div class="col-lg-3 gy-4" data-aos="fade-right">
+                    <div class="col-lg-3 gy-4">
                         <img src="assets/images/about-pictures1.jpg" alt="About Cafedine" class="img-fluid">
                     </div>
-                    <div class="col-lg-4 gy-4" data-aos="flip-up">
+                    <div class="col-lg-4 gy-4">
                         <img src="assets/images/about-pictures2.jpg" alt="About Cafedine" class="img-fluid">
                     </div>
                     <div class="col-lg-5 gy-4">
                         <div>
-                            <h2 class="sub-heading" data-aos="fade-left">About Us</h2>
-                            <p class="description mt-3 mt-xl-4" data-aos="fade-left">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente necessitatibus id, animi nemo quos eos minus adipisci veritatis quibusdamm.</p>
-                            <p class="description mb-2 mb-xl-3" data-aos="fade-left">Lorem ipsum dolor sit amet, consectetur adipisicing elit. repudiandae eius doloribus accusamus fugit .</p>
-                            <span class="heading3" data-aos="fade-left">- Clean Environment</span>
-                            <span class="heading3" data-aos="fade-left">- Experience chefs</span>
-                            <span class="heading3" data-aos="fade-left">- Fresh and creative dishes</span>
-                            <div class="booking mt-2 mt-lg-2 mt-xl-3" data-aos="fade-left">
+                            <h2 class="sub-heading" >About Us</h2>
+                            <p class="description mt-3 mt-xl-4" >Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente necessitatibus id, animi nemo quos eos minus adipisci veritatis quibusdamm.</p>
+                            <p class="description mb-2 mb-xl-3" >Lorem ipsum dolor sit amet, consectetur adipisicing elit. repudiandae eius doloribus accusamus fugit .</p>
+                            <span class="heading3" >- Clean Environment</span>
+                            <span class="heading3" >- Experience chefs</span>
+                            <span class="heading3" >- Fresh and creative dishes</span>
+                            <div class="booking mt-2 mt-lg-2 mt-xl-3" >
                                 <p class="heading3">Book Now !
                                     <span>+34567890</span>
                                 </p>
@@ -139,12 +139,10 @@
                 <div class="row">
                     <div class="col-lg-8">
                         <div class="cta-content">
-                            <span class="heading" data-aos="fade-right"
-                            data-aos-offset="300"
-                            data-aos-easing="ease-in-sine">Prepare The Best Dishes</span>
-                            <h3 class="section-mainHeading text-white" data-aos="fade-left">Are you looking for a quite place?</h3>
-                            <a href="reservation.html" class="btn text-uppercase btn-style" data-aos="fade-up"
-                            data-aos-anchor-placement="top-bottom">book now</a>
+                            <span class="heading" >Prepare The Best Dishes</span>
+                            <h3 class="section-mainHeading text-white" >Are you looking for a quite place?</h3>
+                            <a href="reservation.html" class="btn text-uppercase btn-style" 
+                            >book now</a>
                         </div>
                     </div>
                 </div>
@@ -160,45 +158,45 @@
                 <div class="row">
                     <div class="offset-lg-2 col-lg-8">
                         <div class="text-center text-capitalize">
-                            <span class="heading" data-aos="zoom-in-down">Our services</span>
-                            <h2 class="sub-heading" data-aos="zoom-in-down">We provide good services with lots of facilities</h2>
+                            <span class="heading">Our services</span>
+                            <h2 class="sub-heading" >We provide good services with lots of facilities</h2>
                         </div>
                     </div>
                 </div>
                 <!-- service contents -->
                  <div class="row ">
                     <!-- service 1 -->
-                    <div class="col-md-4 text-center gx-4 gy-4" data-aos="zoom-in">
+                    <div class="col-md-4 text-center gx-4 gy-4" >
                         <i class="fa-solid fa-martini-glass"></i>
                         <h3 class="heading3">Fresh Food</h3>
                         <p class="description">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
                     </div>
                     <!-- service 2 -->
-                    <div class="col-md-4 text-center gx-4 gy-4" data-aos="zoom-in">
+                    <div class="col-md-4 text-center gx-4 gy-4" >
                         <i class="fa-solid fa-basket-shopping"></i>
                         <h3 class="heading3">Quality Cuisine</h3>
                         <p class="description">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
                     </div>
                     <!-- service 3 -->
-                    <div class="col-md-4 text-center gx-4 gy-4" data-aos="zoom-in">
+                    <div class="col-md-4 text-center gx-4 gy-4">
                         <i class="fa-solid fa-cake-candles"></i>
                         <h3 class="heading3">Bread & Pancake</h3>
                         <p class="description">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
                     </div>
                     <!-- service 4 -->
-                    <div class="col-md-4 text-center gx-4 gy-4" data-aos="zoom-in">
+                    <div class="col-md-4 text-center gx-4 gy-4" >
                         <i class="fa-solid fa-basket-shopping"></i>
                         <h3 class="heading3">Fresh Vegies Salad</h3>
                         <p class="description">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
                     </div>
                     <!-- service 5 -->
-                    <div class="col-md-4 text-center gx-4 gy-4" data-aos="zoom-in">
+                    <div class="col-md-4 text-center gx-4 gy-4" >
                         <i class="fa-solid fa-utensils"></i>
                         <h3 class="heading3">Event Management</h3>
                         <p class="description">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
                     </div>
                     <!-- service 6 -->
-                    <div class="col-md-4 text-center gx-4 gy-4" data-aos="zoom-in">
+                    <div class="col-md-4 text-center gx-4 gy-4" >
                         <i class="fa-solid fa-bowl-food"></i>
                         <h3 class="heading3">Reserve Now</h3>
                         <p class="description">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
@@ -385,11 +383,7 @@
 
     <!-- jquery cdn -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-    <!-- aos js cdn -->
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script>
-        AOS.init();
-    </script>
+    
     <!-- swiper js -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <!-- bootstrap js cdn -->
