--- a/contact.html
+++ b/contact.html
@@ -97,7 +97,7 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-12">
-                    <h1 class="text-white text-center section-mainHeading" data-aos="flip-left">Contact Us</h1>
+                    <h1 class="text-white text-center section-mainHeading" >Contact Us</h1>
                 </div>
             </div>
         </div>
@@ -112,8 +112,8 @@
             <div class="row">
                 <div class="offset-lg-2 col-lg-8">
                     <div class="text-center text-capitalize">
-                        <span class="heading" data-aos="flip-right">Contact us</span>
-                        <h2 class="sub-heading" data-aos="flip-right">Get in touch</h2>
+                        <span class="heading" >Contact us</span>
+                        <h2 class="sub-heading" >Get in touch</h2>
                     </div>
                 </div>
             </div>
@@ -290,11 +290,7 @@
 
  <!-- jquery cdn -->
  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
- <!-- aos js cdn -->
- <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
- <script>
-     AOS.init();
- </script>
+ 
  <!-- swiper js -->
  <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
  <!-- bootstrap js cdn -->
