--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                     <div class="swiper-slide" id="banner-slide1">
                         <div class="container">
                             <div class="row">
-                                <div class="col-lg-7 " data-aos="fade-right">
+                                <div class="col-lg-7 " >
                                     <div class="text-start">
                                         <span>Welcome to Restaurant</span>
                                         <h1 class="text-white section-mainHeading">We deliver good quality food with great service to our customers </h1>
@@ -113,7 +113,7 @@
                     <div class="swiper-slide" id="banner-slide2">
                         <div class="container">
                             <div class="row">
-                                <div class="col-lg-7 " data-aos="fade-right">
+                                <div class="col-lg-7 " >
                                     <div class="text-start">
                                         <span>Welcome to Restaurant</span>
                                         <h1 class="text-white section-mainHeading">Fresh, delicious food to reach your optimum health and fitness </h1>
@@ -127,7 +127,7 @@
                     <div class="swiper-slide" id="banner-slide3">
                         <div class="container">
                             <div class="row">
-                                <div class="col-lg-7" data-aos="fade-right">
+                                <div class="col-lg-7" >
                                     <div class="text-start">
                                         <span>Welcome to Restaurant</span>
                                         <h1 class="text-white section-mainHeading">Good food starts with good ingridients. Have a great time with us </h1>
@@ -149,7 +149,7 @@
             <div class="container">
                 <div class="intro-wrap bg-white w-100">
                     <div class="row">
-                        <div class="col-md-4" data-aos="fade-up">
+                        <div class="col-md-4" >
                             <div class="">
                                 <!-- <i class="fa-solid fa-utensils"></i> -->
                                  <img src="assets/images/soup bowl.png" alt="intro" class="img-fluid">
@@ -157,7 +157,7 @@
                                 <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis libero ! Perspiciatis.</p>
                             </div>
                         </div>
-                        <div class="col-md-4" data-aos="fade-up">
+                        <div class="col-md-4" >
                             <div class="">
                                 <!-- <i class="fa-solid fa-clipboard-list"></i> -->
                                  <img src="assets/images/food chart.png" alt="intro" class="img-fluid">
@@ -165,7 +165,7 @@
                                 <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. sunt labore repellendus soluta.</p>
                             </div>
                         </div>
-                        <div class="col-md-4" data-aos="fade-up">
+                        <div class="col-md-4" >
                             <div class="">
                                 <img src="assets/images/destination.png" alt="intro" class="img-fluid">
                                 <h3 class="text-capitalize text-dark heading3">free delivery</h3>
@@ -184,7 +184,7 @@
             <div class="container">
                 <!-- about header -->
                 <div class="row">
-                    <div class="offset-lg-2 col-lg-8" data-aos="zoom-in">
+                    <div class="offset-lg-2 col-lg-8" >
                         <div class="text-center text-capitalize">
                             <span class="heading">about cafedine</span>
                             <h2 class="sub-heading">We are a modern restaurant in the center of the city</h2>
@@ -194,31 +194,31 @@
                 <!-- about-content -->
                 <div class="row">
                     <!-- about content 1 -->
-                    <div class="col-md-4 g-4" data-aos="fade-right">
+                    <div class="col-md-4 g-4" >
                         <figure>
                             <img src="assets/images/about1.jpg" alt="about image" class="img-fluid">
                         </figure>
-                        <div  data-aos="zoom-in">
+                        <div  >
                             <h3 class="heading3">Quality Food</h3>
                             <p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit.impedit maiores fugit illo deserunt!</p>
                         </div>
                     </div>
                     <!-- about content 2 -->
-                    <div class="col-md-4 g-4" data-aos="flip-up">
+                    <div class="col-md-4 g-4" >
                         <figure>
                             <img src="assets/images/about2.jpg" alt="about image" class="img-fluid">
                         </figure>
-                        <div data-aos="zoom-in">
+                        <div >
                             <h3 class="heading3" >Friendly place</h3>
                             <p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit.impedit maiores fugit illo deserunt!</p>
                         </div>
                     </div>
                     <!-- about content 3 -->
-                    <div class="col-md-4 g-4" data-aos="fade-left">
+                    <div class="col-md-4 g-4" >
                         <figure>
                             <img src="assets/images/about3.jpg" alt="about image" class="img-fluid">
                         </figure>
-                        <div data-aos="zoom-in">
+                        <div >
                             <h3 class="heading3">Affordable price</h3>
                             <p class="description">Lorem ipsum dolor sit amet,  elit consectetur adipisicing elit.impedit maiores fugit illo deserunt!</p>
                         </div>
@@ -235,9 +235,9 @@
                 <div class="row">
                     <div class=" offset-lg-3 col-lg-6">
                         <div class="cta-content text-center">
-                            <span class="heading" data-aos="fade-right">Prepare The Best Dishes</span>
-                            <h3 class="sub-heading" data-aos="fade-left">Come & Experience Our Best of World Class Cousine</h3>
-                            <a href="reservation.html" class="btn text-uppercase btn-style" data-aos="zoom-in-down">book now</a>
+                            <span class="heading" >Prepare The Best Dishes</span>
+                            <h3 class="sub-heading" >Come & Experience Our Best of World Class Cousine</h3>
+                            <a href="reservation.html" class="btn text-uppercase btn-style" >book now</a>
                         </div>
                     </div>
                 </div>
@@ -251,7 +251,7 @@
                 <!-- menu heading -->
                 <div class="row">
                     <div class="offset-md-2 col-md-8" >
-                        <div class="text-center" data-aos="zoom-in">
+                        <div class="text-center">
                             <span class="heading">CafeDine Dishes</span>
                             <p class="sub-heading">We provide quality food.We care about your health</p>
                         </div>
@@ -282,7 +282,7 @@
                   <div class="row mt-4" id="Grid">
                     <!-- menu item 1 -->
                     <div class="col-md-6 g-4 mix starter "data-custom-order="1" >
-                        <div class="d-flex" data-aos="fade-down-right" >
+                        <div class="d-flex"  >
                             <img src="assets/images/menu1.jpg" alt="Menu Item" class="img-fluid">
                             <div class="ms-4">
                                 <h4 class="heading3">Vitello Tonato - 
@@ -294,7 +294,7 @@
                     </div>
                     <!-- menu item 2 -->
                     <div class="col-md-6 g-4 mix lunch" data-custom-order="2">
-                        <div class="d-flex" data-aos="fade-down-left" >
+                        <div class="d-flex"  >
                             <img src="assets/images/menu2.jpg" alt="Menu Item" class="img-fluid">
                             <div class="ms-4">
                                 <h4 class="heading3">Crema di Pomodoro - 
@@ -306,7 +306,7 @@
                     </div>
                     <!-- menu item 3 -->
                     <div class="col-md-6 g-4 mix dinner starter lunch" data-custom-order="3">
-                        <div class="d-flex" data-aos="fade-right">
+                        <div class="d-flex">
                             <img src="assets/images/menu3.jpg" alt="Menu Item" class="img-fluid">
                             <div class="ms-4">
                                 <h4 class="heading3">Oatmeal Cookie - 
@@ -318,7 +318,7 @@
                     </div>
                     <!-- menu item 4 -->
                     <div class="col-md-6 g-4 mix lunch" data-custom-order="2">
-                        <div class="d-flex" data-aos="fade-left">
+                        <div class="d-flex" >
                             <img src="assets/images/menu4.jpg" alt="Menu Item" class="img-fluid">
                             <div class="ms-4">
                                 <h4 class="heading3">Seasonal Soup  - 
@@ -330,7 +330,7 @@
                     </div>
                     <!-- menu item 5 -->
                     <div class="col-md-6 g-4 mix dinner" data-custom-order="3">
-                        <div class="d-flex" data-aos="zoom-in-down">
+                        <div class="d-flex">
                             <img src="assets/images/menu5.jpg" alt="Menu Item" class="img-fluid">
                             <div class="ms-4">
                                 <h4 class="heading3">Pizza Pane  - 
@@ -342,7 +342,7 @@
                     </div>
                     <!-- menu item 6 -->
                     <div class="col-md-6 g-4 mix starter" data-custom-order="1">
-                        <div class="d-flex" data-aos="zoom-in-down">
+                        <div class="d-flex" >
                             <img src="assets/images/menu6.jpg" alt="Menu Item" class="img-fluid">
                             <div class="ms-4">
                                 <h4 class="heading3">Carpacio  - 
@@ -354,7 +354,7 @@
                     </div>
                     <!-- menu item 7 -->
                     <div class="col-md-6 g-4 mix lunch dinner" data-custom-order="2">
-                        <div class="d-flex" data-aos="fade-up-right">
+                        <div class="d-flex" >
                             <img src="assets/images/menu7.jpg" alt="Menu Item" class="img-fluid">
                             <div class="ms-4">
                                 <h4 class="heading3">Insalata Rucola  - 
@@ -366,7 +366,7 @@
                     </div>
                     <!-- menu item 8 -->
                     <div class="col-md-6 g-4 mix dinner" data-custom-order="3">
-                        <div class="d-flex" data-aos="fade-up-left">
+                        <div class="d-flex" >
                             <img src="assets/images/menu8.jpg" alt="Menu Item" class="img-fluid">
                             <div class="ms-4">
                                 <h4 class="heading3">Prawn  - 
@@ -380,7 +380,7 @@
 
                   <div class="row mt-4">
                     <div class="col-12">
-                        <div class="text-center" data-aos="zoom-in">
+                        <div class="text-center" >
                             <a href="recipes.html" class="text-uppercase btn btn-style text-white">view full menu</a>
                         </div>
                     </div>
@@ -566,11 +566,7 @@
 
     <!-- jquery cdn -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-    <!-- aos js cdn -->
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script>
-        AOS.init();
-    </script>
+   
     <!-- mixitup cdn -->
     <script src="https://www.jqueryscript.net/demo/jQuery-Plugin-For-Filtering-Sorting-Html-Elements-MixItUp/jquery.mixitup.min.js"></script>
     <!-- swiper js -->
