--- a/recipes.html
+++ b/recipes.html
@@ -96,7 +96,7 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-12">
-                    <h1 class="text-white text-center section-mainHeading"  data-aos="zoom-in">Food Menu </h1>
+                    <h1 class="text-white text-center section-mainHeading"  >Food Menu </h1>
                 </div>
             </div>
         </div>
@@ -112,8 +112,8 @@
             <div class="row">
                 <div class="offset-md-2 col-md-8">
                     <div class="text-center">
-                        <span class="heading" data-aos="fade-right">CafeDine Dishes</span>
-                        <p class="sub-heading" data-aos="fade-left">We provide quality food.We care about your health</p>
+                        <span class="heading" >CafeDine Dishes</span>
+                        <p class="sub-heading" >We provide quality food.We care about your health</p>
                     </div>
                 </div>
             </div>
@@ -260,8 +260,8 @@
                 <div class="row">
                     <div class="offset-md-2 col-md-8">
                         <div class="text-center">
-                            <span class="heading" data-aos="zoom-in">Main Dishes</span>
-                            <p class="sub-heading" data-aos="zoom-in">We provide quality food.We care about your health</p>
+                            <span class="heading" >Main Dishes</span>
+                            <p class="sub-heading" >We provide quality food.We care about your health</p>
                         </div>
                     </div>
                 </div>
@@ -269,7 +269,7 @@
                 <!-- main dishes -->
                  <div class="row">
                     <!-- main dish 1 -->
-                    <div class="col-md-4 g-4" data-aos="flip-left">
+                    <div class="col-md-4 g-4">
                         <div>
                             <img src="assets/images/about2.jpg" alt="Menu" class="">
                             <h4 class="heading3">Tuna Roast Source - 
@@ -280,7 +280,7 @@
                         </div>
                     </div>
                     <!-- main dish 2 -->
-                    <div class="col-md-4 g-4" data-aos="flip-down" >
+                    <div class="col-md-4 g-4" >
                         <div>
                             <img src="assets/images/about1.jpg" alt="Menu" class="">
                             <h4 class="heading3">Tuna Roast Source - 
@@ -291,7 +291,7 @@
                         </div>
                     </div>
                     <!-- main dish 3 -->
-                    <div class="col-md-4 g-4" data-aos="flip-right">
+                    <div class="col-md-4 g-4" >
                         <div>
                             <img src="assets/images/about3.jpg" alt="Menu" class="">
                             <h4 class="heading3">Tuna Roast Source - 
@@ -302,7 +302,7 @@
                         </div>
                     </div>
                     <!-- main dish 4 -->
-                    <div class="col-md-4 g-4" data-aos="zoom-out-up">
+                    <div class="col-md-4 g-4" >
                         <div>
                             <img src="assets/images/about3.jpg" alt="Menu" class="">
                             <h4 class="heading3">Tuna Roast Source - 
@@ -313,7 +313,7 @@
                         </div>
                     </div>
                     <!-- main dish 5 -->
-                    <div class="col-md-4 g-4" data-aos="flip-up">
+                    <div class="col-md-4 g-4" >
                         <div>
                             <img src="assets/images/about2.jpg" alt="Menu" class="">
                             <h4 class="heading3">Tuna Roast Source - 
@@ -324,7 +324,7 @@
                         </div>
                     </div>
                     <!-- main dish 6 -->
-                    <div class="col-md-4 g-4" data-aos="zoom-out-up">
+                    <div class="col-md-4 g-4" >
                         <div>
                             <img src="assets/images/about1.jpg" alt="Menu" class="">
                             <h4 class="heading3">Tuna Roast Source - 
@@ -444,11 +444,7 @@
 
     <!-- jquery cdn -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-    <!-- aos js cdn -->
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script>
-        AOS.init();
-    </script>
+    
      <!-- mixitup cdn -->
      <script src="https://www.jqueryscript.net/demo/jQuery-Plugin-For-Filtering-Sorting-Html-Elements-MixItUp/jquery.mixitup.min.js"></script>
     <!-- bootstrap js cdn -->
