--- a/reservation.html
+++ b/reservation.html
@@ -98,7 +98,7 @@
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-12">
-                        <h1 class="text-white text-center section-mainHeading" data-aos="zoom-in">Reservation</h1>
+                        <h1 class="text-white text-center section-mainHeading" >Reservation</h1>
                     </div>
                 </div>
             </div>
@@ -112,14 +112,14 @@
                 <div class="row">
                     <!-- reservation heading -->
                     <div class="col-lg-8 col-md-6 g-4">
-                        <span class="heading" data-aos="fade-right">Reservation</span>
-                        <p class="sub-heading" data-aos="fade-right">Reserve your seat for betterment</p>
+                        <span class="heading" >Reservation</span>
+                        <p class="sub-heading" >Reserve your seat for betterment</p>
                         <!-- reservation -->
                          <div class="row">
                             <div class="col-12">
                                 <form action="" method="get" >
 
-                                    <div class="row" data-aos="fade-right">
+                                    <div class="row" >
 
                                         <!-- name -->
                                         <div class="col-lg-4 col-md-6 g-4" >
@@ -175,20 +175,20 @@
                     <!-- check availability -->
                     <div class="col-lg-4 col-md-6 g-4 " id="check-Availability" >
                         <div class="check-availability text-center" >
-                            <span class="heading " data-aos="flip-right">check availability</span>
-                            <h3 class="sub-heading opening-time" data-aos="flip-right">Opening Times</h3>
+                            <span class="heading " >check availability</span>
+                            <h3 class="sub-heading opening-time" >Opening Times</h3>
                             <!-- date and time -->
                             <div>
-                                <h4 class="heading3" data-aos="flip-right">Monday - Thursday
-                                    <span class="description" data-aos="flip-right">9.00am - 12.00pm</span>
+                                <h4 class="heading3" >Monday - Thursday
+                                    <span class="description" >9.00am - 12.00pm</span>
                                 </h4>
 
-                                <h4 class="heading3" data-aos="flip-right">Friday - Sunday
-                                    <span class="description" data-aos="flip-right">2.00pm - 8.00pm</span>
+                                <h4 class="heading3" >Friday - Sunday
+                                    <span class="description" >2.00pm - 8.00pm</span>
                                 </h4>
                             </div>
-                            <span class="heading " data-aos="flip-right">Call us for</span>
-                            <h3 class="sub-heading " data-aos="flip-right">02 34597879</h3>
+                            <span class="heading " >Call us for</span>
+                            <h3 class="sub-heading " >02 34597879</h3>
                         </div>
                     </div>
                 </div>
@@ -305,11 +305,7 @@
 
     <!-- jquery cdn -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-    <!-- aos js cdn -->
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script>
-        AOS.init();
-    </script>
+
     <!-- bootstrap js cdn -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <!-- my js -->
