--- a/cart.html
+++ b/cart.html
@@ -40,7 +40,7 @@
                     <i class="fa-solid fa-bars"></i>
                 </button>
                 <!-- navbar nav -->
-                <div class="collapse navbar-collapse justify-content-around" id="myNav">
+                <div class="collapse navbar-collapse " id="myNav">
                     <ul class="navbar-nav ms-auto mb-lg-0 align-items-center ">
                         <li class="nav-item ms-lg-4">
                             <a href="index.html" class="nav-link fw-semibold text-uppercase text-white "  >Home</a>
@@ -97,7 +97,7 @@
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-12">
-                        <h1 class="text-white text-center section-mainHeading" data-aos="flip-left">Cart Page</h1>
+                        <h1 class="text-white text-center section-mainHeading" >Cart Page</h1>
                     </div>
                 </div>
             </div>
@@ -430,11 +430,7 @@
 
      <!-- jquery cdn -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-    <!-- aos js cdn -->
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script>
-        AOS.init();
-    </script>
+    
     <!-- bootstrap js cdn -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <!-- my js -->
