--- a/gallery.html
+++ b/gallery.html
@@ -95,7 +95,7 @@
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-12">
-                        <h1 class="text-white text-center section-mainHeading" data-aos="zoom-in">Our Gallery</h1>
+                        <h1 class="text-white text-center section-mainHeading">Our Gallery</h1>
                     </div>
                 </div>
             </div>
@@ -110,65 +110,63 @@
                 <div class="row">
                     <div class="offset-md-2 col-md-8">
                         <div class="text-center">
-                            <span class="heading" data-aos="zoom-in">Our Gallery</span>
-                            <p class="sub-heading" data-aos="zoom-in">Awesome place good decoration to spend quality time</p>
+                            <span class="heading" >Our Gallery</span>
+                            <p class="sub-heading" >Awesome place good decoration to spend quality time</p>
                         </div>
                     </div>
                 </div>
                 <!-- gallery -->
                  <div class="row">
                     <!-- gallery 1 -->
-                    <div class="col-md-4 g-4" data-aos="fade-right">
+                    <div class="col-md-4 g-4" >
                         <div>
                             <img src="assets/images/gallery1.jpg" alt="gallery" class="img-fluid">
                         </div>
                     </div>
                     <!-- gallery 2 -->
-                    <div class="col-md-4 g-4" data-aos="fade-down">
+                    <div class="col-md-4 g-4" >
                        <div>
                         <img src="assets/images/gallery2.jpg" alt="gallery" class="img-fluid">
                        </div>
                     </div>
                     <!-- gallery 3 -->
-                    <div class="col-md-4 g-4" data-aos="fade-left">
+                    <div class="col-md-4 g-4" >
                         <div>
                             <img src="assets/images/gallery3.jpg" alt="gallery" class="img-fluid">
                         </div>
                     </div>
                     <!-- gallery 4 -->
-                    <div class="col-md-4 g-4" data-aos="flip-left">
+                    <div class="col-md-4 g-4" >
                         <div>
                             <img src="assets/images/gallery4.jpg" alt="gallery" class="img-fluid">
                         </div>
                     </div>
                     <!-- gallery 5 -->
-                    <div class="col-md-4 g-4"data-aos="flip-up">
+                    <div class="col-md-4 g-4">
                         <div>
                             <img src="assets/images/gallery5.jpg" alt="gallery" class="img-fluid">
                         </div>
                     </div>
                     <!-- gallery 6 -->
-                    <div class="col-md-4 g-4" data-aos="flip-right">
+                    <div class="col-md-4 g-4" >
                         <div>
                             <img src="assets/images/gallery6.jpg" alt="gallery" class="img-fluid">
                         </div>
                     </div>
                     <!-- gallery 7 -->
-                    <div class="col-md-4 g-4" data-aos="fade-up"
-                    data-aos-anchor-placement="center-bottom">
+                    <div class="col-md-4 g-4" >
                         <div>
                             <img src="assets/images/gallery7.jpg" alt="gallery" class="img-fluid">
                         </div>
                     </div>
                     <!-- gallery 8 -->
-                    <div class="col-md-4 g-4" data-aos="flip-down">
+                    <div class="col-md-4 g-4" >
                         <div>
                             <img src="assets/images/gallery8.jpg" alt="gallery" class="img-fluid">
                         </div>
                     </div>
                     <!-- gallery 9 -->
-                    <div class="col-md-4 g-4" data-aos="fade-up"
-                    data-aos-anchor-placement="center-bottom">
+                    <div class="col-md-4 g-4">
                         <div>
                             <img src="assets/images/gallery9.jpg" alt="gallery" class="img-fluid">
                         </div>
@@ -287,11 +285,7 @@
 
 <!-- jquery cdn -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-<!-- aos js cdn -->
-<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-<script>
-    AOS.init();
-</script>
+
 <!-- bootstrap js cdn -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 <!-- my js -->
